``` 添加GC优化相关JVM参数的文档说明
在JVM文档中添加了有关垃圾收集(GC)优化的建议配置参数，包括控制GC暂停时间、启用堆dump生成、以及各种GC日志输出选项。建议的参数有-XX:MaxGCPauseMillis、-XX:+HeapDumpOnOutOfMemoryError、-XX:HeapDumpPath、-XX:+PrintGC、-XX:+PrintGCDateStamps、-XX:+PrintGCTimeStamps、-XX:+PrintGCDetails和-Xlog。
```