@@ -712,6 +712,21 @@ TLAB：线程专用的内存分配区域，可以解决内存分配冲突问题�
 
    - 其他......
 
+**GC相关的调优都是根据业务大致分析出来的初始配置，所以我们一定是需要不断地调优的，那么必要的日志相关参数就要添加。**
+
+```bash
+-XX:MaxGCPauseMillis=100：最大 GC 暂停时间为 100 毫秒，可以根据实际情况调整；
+-XX:+HeapDumpOnOutOfMemoryError：当出现内存溢出时，自动生成堆内存快照文件；
+-XX:HeapDumpPath=/path/to/heap/dump/file.hprof：堆内存快照文件的存储路径；
+-XX:+PrintGC：输出 GC 信息；
+-XX:+PrintGCDateStamps：输出 GC 发生时间；
+-XX:+PrintGCTimeStamps：输出 GC 发生时 JVM 的运行时间；
+-XX:+PrintGCDetails：输出 GC 的详细信息；
+-Xlog:gc*:file=/path/to/gc.log:time,uptime:filecount=10,filesize=100M：将 GC 日志输出到指定文件中，可以根据需要调整日志文件路径、数量和大小
+```
+
+
+
 
 ### 优化案例
 
